--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^4.8.2",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
